fix z-index

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -4,7 +4,7 @@ nav {
     background-color: var(--color-background);
     width: 100vw;
     max-width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .nav-container {
@@ -81,7 +81,8 @@ nav {
     .hamburger-menu {
         display: block;
         background-color: var(--color-background);
-        position: absolute;
+        position: fixed;
+        z-index: 1;
         top: 0;
         left: 0;
         right: 0;
